# form

./: .gitignore  CMakeLists.txt  README-PS.md  help.bat  help.sh
.github/workflows/: deploy.yml  test.yml
cmake/: CMakePolicy.cmake  check4CPack.cmake  check4CTest.cmake  check4ConfigH.cmake  check4VersionH.cmake  check4_Autoconf.cmake  check4_BuildLog.cmake  check4_optimize.cmake  help.cmake  optim4GCC.cmake  optim4MSVC.cmake
cmake/modules/: FInd7Z.cmake  FindGMP.cmake  FindMPFR.cmake  FindNSIS.cmake  FindPThread4w.cmake  FindRubyTestUnit.cmake
cmake/templates/: CMakeConfigForm.cmake.in  CMakeUninstall.cmake.in
sources/: CMakeLists.txt  config-cmake.h.in  form3.h  startup.c
